align google maps dropdown correctly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,6 @@ div#flightWrapper > input {
   border-top-left-radius: 0;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  left: 150px !important;
   width: 569px !important;
 }
 .pac-item-query {
